# VocalMind

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AUDIT_LOG.md  Makefile  README.md  context.md  docker-compose.gpu.yml  docker-compose.native.yml  docker-compose.yml  presentation_findings.md  start-gpu.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend.yml  ci.yml  deploy-backend.yml  frontend.yml  quality-benchmarks.yml
backend/: .env.example  Dockerfile  bulk_reprocess_llm.py  manual_reprocess.py  pyproject.toml
backend/alembic/versions/: 20260616_0710_0002_notif_and_dispute.py  20260617_2200_0003_user_avatar.py  20260621_2021_f7ed8dd3ea71_add_assistant_session.py  20260623_1200_a1b2c3d4e5f6_add_knowledge_versions.py
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/routes/: agents.py  assistant.py  compliance_disputes.py  feedback.py  interactions.py  internal.py  knowledge.py  notifications.py  rag.py  reviews.py  users.py
backend/app/api/routes/emotion/: dispute_router.py  pipeline.py
backend/app/api/routes/llm_trigger/: router.py
backend/app/core/: audio_folder_watcher.py  audio_resolver.py  config.py  database.py  emotion_fusion.py  feedback_export.py  inference_contracts.py  interaction_processing.py  kaggle_client.py  knowledge_seed.py  knowledge_versioning.py  llm_circuit_breaker.py  model.pkl  notification_service.py  policy_violation_mapping.py  rate_limit.py  request_context.py  speaker_role_infer.py  vectorizer.pkl
backend/app/llm_trigger/: chains.py  prompt_constants.py  prompts.py  retrieval.py  schemas.py  scoring.py  service.py
backend/app/models/: __init__.py  enums.py  faq.py  feedback.py  interaction.py  interaction_score.py  knowledge_version.py  llm_trigger_cache.py  notification.py  organization.py  policy.py  query.py  snapshot.py  user.py  utterance.py
backend/app/schemas/: assistant.py
backend/scripts/: assistant_api_smoke_e2e.py  assistant_smoke_check.py  clean_db.py  migrate_parsed_docs.py  purge_seeded_interactions.py  reset_local_db.py  seed_meridian.py  seed_nexalink.py  verify_openapi.py  verify_supabase_schema.py
backend/tests/: conftest.py  test_agents_isolation.py  test_assistant.py  test_assistant_session_management.py  test_assistant_sql_structure_guard.py  test_assistant_tenant_guard.py  test_assistant_validator_edge_cases.py  test_audio_folder_watcher.py  test_auth.py  test_config_startup_validation.py  test_error_sanitization.py  test_interaction_ingestion.py  test_interaction_processing_quality.py  test_interactions_emotion_comparison_isolation.py  test_interactions_llm_org_filter_isolation.py  test_interactions_llm_triggers.py  test_knowledge_versioning.py  test_llm_circuit_breaker.py  test_llm_trigger_isolation.py  test_llm_trigger_prompts.py  test_llm_trigger_scoring.py  test_llm_trigger_service.py  test_main.py  test_p0_security.py  test_rag_route_isolation.py  test_sop_retrieval.py  test_speaker_role_infer.py  test_unauthorized_access.py
docs/: ADR-001-architecture.md  COSTS.md  PROD_BOOTSTRAP.md  SLA.md
docs/api/: REST_API_REFERENCE.md
docs/architecture/: AUDIO_PROCESSING_PIPELINE.md  BACKEND_ARCHITECTURE.md  DATABASE_SCHEMA.md  SYSTEM_OVERVIEW.md
docs/backend/: CONFIGURATION.md  TESTING.md
docs/design/: vocalmind-design-spec.md
docs/eval/: PIPELINE_FINDINGS.md
docs/explainability/: EVIDENCE_ANCHORED_EXPLAINABILITY_LAYER.md
docs/frontend/: FRONTEND_ARCHITECTURE.md  guidelines.md
docs/llm_trigger/: LLM_TRIGGER_FEATURE_GUIDE.md  MANAGER_ASSISTANT.md
docs/microservices/: RAG_SERVICE.md  WHISPERX_SERVICE.md
docs/operations/: DEPLOYMENT.md
docs/rag/: INGESTION_PIPELINE.md  RAGAS_EVALUATION.md  RAGAS_RESULTS.md  RAG_OVERVIEW.md
docs/user-guide/: AGENT_GUIDE.md  MANAGER_GUIDE.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
infra/benchmarks/: README.md  fc_sanity_2.json  model_triage_v1.json  (+7 more)
kaggle/: README.md
research/: README.md
services/emotion/: Dockerfile  app.py  download_model.py  pyproject.toml  requirements.txt
services/emotion/tests/: test_emotion_service.py  test_emotion_short.py
services/rag/: .env.example  Dockerfile  README.md  config.py  evaluator.py  ingest.py  llm_circuit_breaker.py  prompt_safety.py  pyproject.toml  query_engine.py  ragas_eval.py  reranker.py
services/rag/reports/: full_run_mock.json  ragas_reference_free_20260619_195925.json  ragas_reference_free_20260619_200412.json  ragas_reference_free_20260619_200956.json  ragas_reference_free_20260619_201345.json  ragas_reference_free_20260619_201706.json  ragas_reference_free_20260619_202108.json  ragas_reference_free_20260619_203227.json  ragas_reference_free_20260619_203716.json  ragas_reference_free_20260619_204119.json  ragas_reference_free_20260619_204613.json  ragas_reference_free_20260619_205212.json  ragas_reference_free_20260619_213317.json  ragas_reference_free_20260619_213636.json  ragas_reference_free_20260619_213756.json  ragas_reference_free_20260619_214200.json  ragas_reference_free_20260619_214359.json  ragas_reference_free_20260619_214809.json  ragas_reference_free_20260619_215751.json  ragas_reference_free_20260619_222914.json  ragas_reference_free_20260619_233525.json  ragas_reference_free_20260619_235945.json  ragas_reference_free_20260620_010953.json  ragas_reference_free_20260620_014323.json  ragas_reference_free_20260620_022902.json  ragas_reference_free_20260620_030004.json  ragas_reference_free_20260620_050344.json  ragas_reference_free_20260620_101537.json  ragas_reference_free_20260620_104721.json  ragas_reference_free_20260620_111030.json  ragas_reference_free_20260620_113130.json  ragas_reference_free_20260620_115645.json  ragas_reference_free_20260620_121710.json
services/rag/tests/: test_config.py  test_evaluator.py  test_ingest.py  test_query_engine.py  test_ragas_eval.py
services/vad/: Dockerfile  app.py  pyproject.toml
tools/: README.md  compare_summary.py  download_mlflow_model.py  evaluate_pipeline.py  reprocess_and_compare.py
(+349 files in other folders)
