[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=4.0.0",
    "fastapi>=0.128.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.2.4",
    "httpx>=0.28.1",
    "langchain-core>=0.3.80",
    "langchain-groq>=0.3.8",
    "openai>=2.29.0",
    "pydantic-settings>=2.12.0",
    "pypdf>=5.9.0",
    "pyjwt[crypto]>=2.8.0",
    "pytest>=9.0.2",
    "qdrant-client>=1.15.1",
    "python-multipart>=0.0.22",
    # Required so `from rag.evaluator import PolicyComplianceEvaluator` succeeds.
    # services/rag is mounted into the backend container at /app/rag and its
    # query_engine/evaluator modules pull in groq, llama-index, dotenv, ftfy.
    "groq>=0.30.0",
    "llama-index-core>=0.14.0",
    "llama-index-llms-groq>=0.3.0",
    "python-dotenv>=1.0.0",
    "ftfy>=6.1.0",
    "sqlmodel>=0.0.33",
    "supabase>=2.28.0",
    "tenacity>=9.1.4",
    "transformers>=4.38.0,<4.40.0",
    "google-genai>=0.4.0",
    "uvicorn>=0.40.0",
    "datasets>=2.19.0",
    "pandas>=2.0.0",
    "torch==2.2.0",
    "torchvision==0.17.0",
    "torchaudio==2.2.0",
    "numpy<2.0.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[dependency-groups]
dev = [
    "pip-licenses>=5.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "coverage>=7.0.0",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
