[project]
name = "vocalmind-final-rag"
version = "1.0.0"
description = "VocalMind Final RAG — Dual-granularity policy compliance & answer scoring with Docling, Qdrant, and Groq"
requires-python = ">=3.11"
dependencies = [
    # ── PDF Parsing ──
    "docling>=2.15.0",

    # ── Chunking ──
    "langchain-text-splitters>=0.2.0",

    # ── Embeddings (Ollama HTTP) ──
    "httpx>=0.27.0",

    # ── Vector Store ──
    "qdrant-client>=1.11.0,<1.13.0",

    # ── Reranking (cross-encoder) + sparse vectors for hybrid retrieval ──
    "sentence-transformers>=3.0.0",
    "fastembed>=0.3.0",

    # ── LLM (Groq fallback via llama-index-llms-groq; Ollama Cloud via openai SDK) ──
    "openai>=1.0.0",
    "groq>=0.30.0",

    # ── RAG Framework (response synthesis) ──
    "llama-index-core>=0.14.0",
    "llama-index-llms-groq>=0.3.0",

    # ── RAGAS Evaluation ──
    "ragas>=0.2.0",
    "langchain-groq>=0.3.2",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",
    "rapidfuzz>=3.9.3",
    "google-auth>=2.30.0",

    # ── Config & Utils ──
    "pydantic>=2.0.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0.0",
    "ftfy>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-env>=1.2.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
env = [
    "GROQ_API_KEY=test_key",
    "QDRANT_URL=http://localhost:6333",
]
